# nikka

./: .gitignore  Cargo.toml  Dockerfile  Makefile  gdbinit  run-gdb.sh  rust-toolchain.toml  rustfmt.toml
kernel/: Cargo.toml  build.rs  kernel.json
kernel/.cargo/: config.toml
kernel/examples/bga/: Cargo.toml
kernel/examples/bga/src/: bga.rs  color.rs  frame_buffer.rs  lib.rs  main.rs
kernel/scripts/: extract_backtraces.py  run_kernel.sh
kernel/src/: lib.rs  main.rs
kernel/src/allocator/: big.rs  big_pair.rs  memory_allocator.rs  mod.rs
kernel/src/error/: mod.rs
kernel/src/fs/: bitmap.rs  block_cache.rs  directory_entry.rs  disk.rs  file.rs  file_system.rs  inode.rs  mod.rs  superblock.rs
kernel/src/log/: mod.rs
kernel/src/memory/: address_space.rs  frame_allocator.rs  frame_guard.rs  gdt.rs  mapped_block.rs  mapping.rs  mmu.rs  mod.rs  page_allocator.rs  path.rs  phys2virt.rs  range.rs  stack.rs  tss.rs
kernel/src/process/: mod.rs  process.rs  registers.rs  scheduler.rs  syscall.rs  table.rs
kernel/src/smp/: acpi_info.rs  ap_init.rs  cpu.rs  local_apic.rs  mod.rs
kernel/src/time/: mod.rs  pit8254.rs  rtc.rs
kernel/src/trap/: mod.rs
kernel/tests/: 1-hw-1-rtc.rs  1-hw-3-high-resolution-date.rs  1-hw-4-interrupts.rs  2-mm-1-frame-allocator.rs  2-mm-2-block.rs  2-mm-2-page-allocator.rs  2-mm-3-phys2virt.rs  2-mm-4-translate.rs  2-mm-5-map.rs  2-mm-6-duplicate-subtree.rs  2-mm-7-drop-subtree.rs  2-mm-8-resize-frame-allocator.rs  3-allocator-1-big.rs  3-allocator-5-small.rs  4-process-1-local-apic.rs  4-process-2-cpus.rs  4-process-3-elf.rs  4-process-4-permission-checks.rs  4-process-5-user-mode.rs  4-process-6-log-value.rs  4-process-6-syscall.rs  4-process-7-table.rs  4-process-8-preemption.rs  4-process-9-scheduler.rs  5-sync-4-correlation-point.rs  5-sync-5-ap-init.rs  6-um-2-memory-syscalls.rs  6-um-3-eager-fork.rs  6-um-4-trap-handler.rs  6-um-5-cow-fork.rs  7-fs-1-block-cache-1-write.rs  7-fs-1-block-cache-2-read.rs  7-fs-2-bitmap.rs  7-fs-3-inode.rs  7-fs-4-directory.rs  7-fs-5-open.rs  page_fault.rs  panic_in_logging.rs  stack_overflow.rs  trap.rs
kernel/tests/fs_helpers/: mod.rs
kernel/tests/include/: memory_allocator.rs
kernel/tests/init/: mod.rs
kernel/tests/mm_helpers/: mod.rs
kernel/tests/process_helpers/: mod.rs
ku/: Cargo.toml
ku/.cargo/: config.toml
ku/src/: lib.rs
ku/src/allocator/: big.rs  big_pair.rs  cache.rs  dispatcher.rs  dry.rs  dummy_info.rs  fixed_size.rs  info.rs  mod.rs  quarry.rs
ku/src/backtrace/: callsite.rs  mod.rs
ku/src/collections/: bitmap.rs  dynamic_bitmap.rs  lru.rs  mod.rs
ku/src/error/: mod.rs
ku/src/info/: mod.rs
ku/src/ipc/: mod.rs  pipe.rs
ku/src/log/: mod.rs
ku/src/memory/: addr.rs  block.rs  frage.rs  mmu.rs  mod.rs  page_fault_info.rs  port.rs  size.rs
ku/src/process/: elf.rs  mini_context.rs  mod.rs  pid.rs  registers.rs  syscall.rs  trap_info.rs
ku/src/sync/: irq_spinlock.rs  mod.rs  once_lock.rs  panic.rs  sequence_lock.rs  spinlock.rs
ku/src/time/: correlation_interval.rs  correlation_point.rs  hz.rs  mod.rs  pit8254.rs  rtc.rs  tsc.rs
ku/tests/: 3-allocator-2-bitmap.rs  3-allocator-3-dynamic-bitmap.rs  3-allocator-4-quarry.rs  3-allocator-5-small.rs  4-process-3-elf.rs  5-sync-1-once-lock.rs  5-sync-2-deadlock.rs  5-sync-2-spinlock.rs  5-sync-3-sequence-lock.rs  5-sync-4-correlation-point.rs  6-um-1-pipe.rs  7-fs-6-lru.rs  addr.rs  pipe-visualization.rs
ku/tests/allocator/: big.rs  big_for_pipe.rs  cache.rs  caching_big.rs  fallback.rs  mod.rs
ku/tests/log/: mod.rs
pci/: Cargo.toml
pci/src/: bar.rs  class.rs  config_space.rs  device.rs  device_id.rs  id.rs  lib.rs  routing_id.rs
pci/src/test/: devices.rs  mock_device.rs  mod.rs
pic8259/: Cargo.toml
pic8259/src/: lib.rs
sentinel_frame/: Cargo.toml
sentinel_frame/src/: lib.rs
sentinel_frame/tests/: with_sentinel_frame.rs
sentinel_frame/tests/with_sentinel_frame/expand/: abi.expanded.rs  abi.rs  args.expanded.rs  args.rs  return_type.expanded.rs  return_type.rs
sentinel_frame/tests/with_sentinel_frame/fail/: dyn_trait.rs  dyn_trait.stderr  non_primitive_types.rs  non_primitive_types.stderr  too_many_args.rs  too_many_args.stderr  unsupported_abi.rs  unsupported_abi.stderr
sentinel_frame/tests/with_sentinel_frame/pass/: abi.rs  modifiers.rs
serial/: Cargo.toml
serial/src/: lib.rs
text/: Cargo.toml
text/src/: cursor.rs  grid.rs  lib.rs  test.rs
user/: user.lds
user/.cargo/: config.toml
user/check_context/: Cargo.toml
user/check_context/src/: main.rs
user/cow_fork/: Cargo.toml
user/cow_fork/src/: main.rs
user/eager_fork/: Cargo.toml
user/eager_fork/src/: main.rs
user/exit/: Cargo.toml
user/exit/src/: main.rs
user/lib/: Cargo.toml
user/lib/src/: lib.rs  syscall.rs
user/lib/src/allocator/: map.rs  mod.rs
user/lib/src/memory/: mod.rs
user/log_value/: Cargo.toml
user/log_value/src/: main.rs
user/loop/: Cargo.toml
user/loop/src/: main.rs
user/memory_syscalls/: Cargo.toml
user/memory_syscalls/src/: main.rs
user/page_fault/: Cargo.toml
user/page_fault/src/: main.rs
user/sched_yield/: Cargo.toml
user/sched_yield/src/: main.rs
user/trap_handler/: Cargo.toml
user/trap_handler/src/: main.rs
