[package]
edition = "2024"
name = "sentinel_frame"
version = "0.5.0"
# The one to blame
authors = ["Oleg Shatov <oleq.shatov@yandex.ru>"]
license = "AGPL-3.0-or-later"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
macrotest = "1"
trybuild = "1"

[lib]
proc-macro = true
